# mollyBet

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
src/: main.cpp  session.cpp  session.h
src/log/: logger.cpp  logger.h  loggerColorConsole.h  loggerConsole.h  loggerFile.h
